Добавляет компоненты попап, камера для третьего ДЗ

--- a/styles/app.css
+++ b/styles/app.css
@@ -5,4 +5,7 @@
 @import "./nav.css";
 @import "./footer.css";
 @import "./article.css";
+@import "./camera.css";
+@import "./popup.css";
+@import "./slider.css";
 @import "./amedia.css";
