--- a/styles/layout.css
+++ b/styles/layout.css
@@ -34,3 +34,9 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+.l-cameras {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+}
