--- a/styles/amedia.css
+++ b/styles/amedia.css
@@ -14,6 +14,10 @@
     .b-article_size_small .b-article__about {
         flex-direction: row;
     }
+
+    .b-camera {
+        grid-column: 4 span;
+    }
 }
 
 @media (min-width: 670px) and (max-width: 959px) {
