--- a/styles/popup.css
+++ b/styles/popup.css
@@ -3,12 +3,112 @@
     z-index: 1;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
-    /* height: 100vh; */
-    background-color: red;
-    display: none;
+    background-color: white;
+    padding-bottom: 40px;
+    transform-origin: 0 0;
+    visibility: hidden;
 }
 
 .b-popup.is-open {
+    transform: scale(1);
     display: block;
+}
+
+.b-popup__analyzer-wrap {
+    position: relative;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.b-popup__analyzer {
+    width: 320px;
+    height: 150px;
+}
+
+.b-popup__close {
+    border: 0;
+    background: #ffd93e;
+    border-radius: 8px;
+    color: black;
+    font-size: 20px;
+    line-height: 32px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+    cursor: pointer;
+    margin-right: 15px;
+    margin-bottom: 10px;
+}
+
+.b-popup__controls {
+    margin-top: 20px;
+}
+
+.b-popup__controls-item {
+    margin-top: 20px;
+}
+
+.b-popup__controls-title {
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.b-popup__no-signal {
+    position: absolute;
+    top: 30px;
+    font-size: 20px;
+    text-align: center;
+    width: 100%;
+    font-weight: bold;
+    color: red;
+    display: block;
+}
+
+@media (min-width: 320px) and (max-width: 669px) {
+
+}
+
+@media (min-width: 670px) and (max-width: 959px) {
+
+}
+
+@media (min-width: 959px) {
+    .b-popup__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .b-popup__controls-item {
+        flex: 0 0 45%;
+    }
+
+    .b-popup__controls {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .b-popup__video {
+        flex: 0 0 70%;
+    }
+    
+    .b-popup__analyzer-wrap {
+        flex: 0 0 25%;
+        position: relative;
+        margin-top: 0;
+    }
+
+    .b-popup__analyzer {
+        width: 100%;
+        height: 300px;
+    }
+
+    .b-popup__controls-item {
+        margin-top: 0;
+    }
 }
