--- a/styles/app.css
+++ b/styles/app.css
@@ -1,11 +1,38 @@
+/*Cброс сдандартных стилей*/
 @import "./reset.css";
+
+/*Общие стили для всего проекта*/
 @import "./common.css";
+
+/*Стили для лэйатуов*/
 @import "./layout.css";
+
+/*Стили для шапки*/
 @import "./header.css";
+
+/*Стили для навигации в шапке*/
 @import "./nav.css";
+
+/*Стили для футера*/
 @import "./footer.css";
+
+/*Стили для карточки события на главной*/
 @import "./article.css";
+
+/*Стили для компонента камера на странице с камерами*/
 @import "./camera.css";
-@import "./popup.css";
+
+/*Стили для компонента кнопки*/
+@import "./button.css";
+
+/*Стили для фильтра видео на странице с камерами*/
+@import "./filter.css";
+
+/*Стили для анализатора звука видео на странице с камерами*/
+@import "./analyzer.css";
+
+/*Стили для компонента range-slider на странице с камерами*/
 @import "./slider.css";
+
+/*Стили для медиазапросов*/
 @import "./amedia.css";
