Правит json, добавляет rewrites на index.html

--- a/views/components/scenario.twig
+++ b/views/components/scenario.twig
@@ -1,6 +1,6 @@
 <h1 class="l-title b-title">{{title}}</h1>
 <div class="l-grid">
-    {% for item in summary %}
+    {% for item in scenario %}
         <article class="b-article 
         {% if item.size == 's' %} b-article_size_small {% endif %}
         {% if item.size == 'l' %} b-article_size_medium {% endif %}
